Envio de correos con GMAIL

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test:db": "tsx src/scripts/test-db.ts",
+    "test:email": "tsx src/scripts/test-email.ts",
     "verify:production": "tsx src/scripts/verificar-produccion.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/typeorm.config.ts",
@@ -26,6 +27,7 @@
     "@google-cloud/storage": "^7.7.0",
     "@scalar/express-api-reference": "^0.8.25",
     "@stripe/stripe-js": "^8.5.3",
+    "@types/nodemailer": "^7.0.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -39,6 +41,7 @@
     "morgan": "^1.10.0",
     "mssql": "^10.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.11",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
